@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: RW Penney <cryptmount@rwpenney.uk>
 Homepage: https://github.com/rwpenney/cryptmount
-Build-Depends: automake, debhelper-compat (= 12), libcryptsetup-dev (>= 2.0),
+Build-Depends: automake, debhelper-compat (= 12), libcryptsetup-dev (>= 2.2),
             libdevmapper-dev, libgcrypt20-dev (>= 1.8), pkgconf
 Rules-Requires-Root: binary-targets
 Standards-Version: 4.7.2
